added docker and docker-compose for easy execution

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -9,5 +9,9 @@
   <body>
     <div id="app"></div>
     <script type="module" src="/src/main.ts"></script>
+    <script>
+        window.API_URL="http://localhost:1234"
+        window.SOCKET_URL=""
+    </script>
   </body>
 </html>
