--- a/frontend/index.html
+++ b/frontend/index.html
@@ -2,15 +2,16 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" href="/favico.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+      <meta name="theme-color" content="#64B5F6">
     <title>Vite + Vue + TS</title>
   </head>
   <body>
     <div id="app"></div>
     <script type="module" src="/src/main.ts"></script>
     <script>
-        window.API_URL="http://localhost:1234"
+        window.API_URL="http://localhost:32768"
         window.SOCKET_URL=""
     </script>
   </body>
